# crypto-strategy-backtesting-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: logging.yaml  settings.yaml  settings_v1.yaml  settings_v2.yaml  settings_v3.yaml  settings_v3_1_be_075.yaml  settings_v3_1_be_100.yaml  settings_v3_1_be_125.yaml  settings_v3_1_be_150.yaml  settings_v4_circuit_breaker.yaml  settings_v4_circuit_breaker_t3.yaml  settings_v4_circuit_breaker_t4.yaml
data/raw/: BTCUSDT_1h.csv
data/raw/validation/: BNBUSDT_1h_2y.csv  BTCUSDT_1h_4y.csv  ETHUSDT_1h_2y.csv  SOLUSDT_1h_2y.csv
results/backtests/BTCUSDT_1h_20260626_145221/: equity_curve.csv  performance_report.json  performance_report.txt  run_metadata.json  trades.csv
results/backtests/BTCUSDT_1h_20260626_151605/: equity_curve.csv  performance_report.json  performance_report.txt  run_metadata.json  trades.csv
results/backtests/BTCUSDT_1h_20260626_151620/: equity_curve.csv  performance_report.json  performance_report.txt  run_metadata.json  trades.csv
results/backtests/BTCUSDT_1h_20260626_151637/: equity_curve.csv  performance_report.txt  (+3 more)
results/final_validation/: validation_summary.csv
results/final_validation_walkforward/: walkforward_summary.csv
scripts/: analyze_backtest_results.py  download_binance_futures_klines.ps1  download_binance_futures_klines.py
src/crypto_futures_bot/: __init__.py  main.py
tests/: test_circuit_breaker_config.py  test_execution_atr_exits.py  test_execution_break_even.py  test_indicators.py  test_position_sizing.py  test_risk_management.py  test_signal_generation.py
(+202 files in other folders)
